--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -2904,7 +2904,7 @@ immunePol <- xpehh %>%
  saveRDS(immunePol, file = 'Appendices/03-immunePol.RDS')
 rm(g)
 ```
-> check
+
 
 The list of inflammatory and autoimmune disorders was from @Zhang2013a Table 2, and included: inflammatory bowel disease, Crohn's disease, ulcerative colitis, celiac disease, systemic lupus erythematosus, rheumatoid arthritis, psoriasis, multiple sclerosis, type 1 diabetes, primary biliary cirrhosis, and vitligo. Autoimmunity is caused by the immune system attacking self rather than foreign antigen and involves both innate and adaptive immune response [@Waldner2009]. The genes involved with the immune response have been suggested as possible candidates of selection [@Grossman2013]. Both gout and these inflammatory and autoimmune disorders have a common cause from the activation of the immune system.
 
@@ -3040,14 +3040,14 @@ sig_ihs_val %>% filter(genename %in% malaria_GR$SYMBOL) %>% select(-gene_chrom, 
 
 Urate has a central role in malarial infection and triggering an immune response [@GallegoDelgado2014]. Given that immune response is a strong candidate to be under selective pressure, malaria associated genes were looked at to see if there were signals of selection. From the GWAS catalog there were two genes that had been associated with malaria at a genome-wide significance threshold (of three, see Table \@ref(tab:gwascatref) for references), that also had evidence of selection with the Polynesian populations. The two genes that also had significant \gls{ihs} scores with Polynesian populations were _ABO_ and _ATP2B4_. 
 
-_ABO_ was the only gene that had significant markers in all four Polynesian populations of the malaria associated genes, and this was only for \gls{ihs}. \gls{cim} had two markers that were significant, the first, rs1053878, was also significant in \gls{ton}. The second marker, rs55764262, was also significant in \gls{nzm} and \gls{sam}, and was in high \gls{ld} (\gls{eas} R^2^ = 0.967) with rs549446. Rs549446 was significant in both \gls{chs} and \gls{jpt}. There were no windows from the frequency-based statistics that met the significance threshold. _ABO_ has also been associated with obesity in \gls{gwas} [@comuzzie2012novel]. The marker rs8176741 had been associated with severe malaria [@Timmann2012], however, this marker had a significant \gls{ihs} in \gls{fin} but no other populations. The other \glspl{snp} that showed significance for \gls{ihs} were not in \gls{ld} (\gls{eas} R^2^ = 0.002) with rs55764262, for which \gls{cim}, \gls{nzm} and \gls{sam} all had a significant result. Both \gls{cim} and \gls{ton} had a different marker (rs1053878) that was significant for \gls{ihs} in _ABO_.
+_ABO_ was the only gene that had significant markers in all four Polynesian populations out of the malaria-associated genes, and this was only for \gls{ihs}. All of the markers with significant \gls{ihs} in _ABO_ were in favour of the derived allele haplotype. \gls{cim} had two markers that were significant, the first, rs1053878, was also significant in \gls{ton}. The second marker, rs55764262, was significant in \gls{cim}, \gls{nzm}, and \gls{sam}, and was not in \gls{ld} (\gls{eas} R^2^ = 0.003) with rs549446. Rs549446 was significant in both \gls{chs} and \gls{jpt}. There were no windows from the frequency-based statistics that met the significance threshold. _ABO_ has also been associated with obesity in \gls{gwas} [@comuzzie2012novel]. The marker rs8176741 had been associated with severe malaria [@Timmann2012], however, this marker had a significant \gls{ihs} in \gls{fin} but no other populations. The other \glspl{snp} that showed significance for \gls{ihs} were not in \gls{ld} (\gls{eas} R^2^ = 0.002) with rs55764262, for which \gls{cim}, \gls{nzm} and \gls{sam} all had a significant result. Both \gls{cim} and \gls{ton} had a different marker (rs1053878) that was significant for \gls{ihs} in _ABO_.
 
 
-Both \gls{sam} and \gls{nzm} had \glspl{snp} that were significant for \gls{ihs} in _ATP2B4_, \gls{sam} had rs10494845, and \gls{nzm} had rs142206068. The malaria-associated variant was rs10900585 [@Timmann2012]. All three variants are in \gls{ld} (\gls{eas} R^2^ = 1.0).
+Both \gls{sam} and \gls{nzm} had \glspl{snp} that were significant for \gls{ihs} in _ATP2B4_, \gls{sam} had rs10494845, and \gls{nzm} had rs142206068, both were in favour of the derived allele haplotype. The malaria-associated variant was rs10900585 [@Timmann2012]. All three variants were not in \gls{ld} with each other (\gls{eas} R^2^ = 0.00).
 
-> direction of ihs?
 
-_DDC_ encodes dopa decarboxylase and has been nominally associated at a genome-wide threshold with malaria [@jallow2009genome]. _DDC_ has also been associated with \gls{bmi} [@Locke2015]. \gls{nzm} had significant markers for \gls{xpehh} for nearly all other populations, \gls{cim} had fewer populations, but across all super population other than \gls{sas}. The \gls{nzm} had multiple markers within the malaria-associated gene, _DDC_, for \gls{nsl}. The markers were rs2060762, rs3807558, rs2329371, and rs1966839. The same markers in addition with rs11238131 and rs4580999 were significant for \gls{ihs}. A \gls{ld} matrix with marker positions is shown in Table \@ref(tab:ddcLd). The marker rs1966839 (reference/derived allele = T, alternative/ancestral allele = C) was in high \gls{ld} (0.998) with the malaria-associated rs1451375 (reference/ancestral allele = C, alternative/derived = A) where the reference and alternative alleles correspond between the \glspl{snp} and both are intronic variants. Under a dominant model the A allele of rs1451375 is protective of severe malaria (OR = 0.75, CI = 0.66-0.85, P = 6 x 10-6, @jallow2009genome).
+
+_DDC_ encodes dopa decarboxylase and has been nominally associated at a genome-wide threshold with malaria [@jallow2009genome]. _DDC_ has also been associated with \gls{bmi} [@Locke2015]. \gls{nzm} had significant markers for \gls{xpehh} for nearly all other populations, \gls{cim} had fewer populations, but across all super population other than \gls{sas}. The \gls{nzm} had multiple markers within the malaria-associated gene, _DDC_, for \gls{nsl}. The markers were rs2060762, rs3807558, rs2329371, and rs1966839. The same markers in addition with rs11238131 and rs4580999 were significant for \gls{ihs}. A \gls{ld} matrix with marker positions is shown in Table \@ref(tab:ddcLd). The marker rs1966839 (reference/derived allele = T, alternative/ancestral allele = C) had scores from \gls{ihs} and \gls{nsl} in favour of the ancestral allele and was in high \gls{ld} (0.988) with the malaria-associated rs1451375 (reference/ancestral allele = C, alternative/derived = A) where the reference and alternative alleles correspond between the \glspl{snp}, and both are intronic variants. Under a dominant model the A allele of rs1451375 is protective of severe malaria (OR = 0.75, CI = 0.66-0.85, P = 6 x 10-6, @jallow2009genome) and corresponded with the ancestral allele of rs1966839.
 
 
 
@@ -3075,6 +3075,7 @@ rs1966839	0.49	0.316	0.607	0.495	0.698	0.988	1.0", header = TRUE)
 
 ddc_eas_r2 %>% dplyr::rename(`Rs number` = RS_number) %>% kable(format = 'latex', caption = '(\\#tab:ddcLd) Linkage disequillibrium in EAS populations (R\\textsuperscript{2}) between markers in \\textit{DDC}', escape = FALSE, booktabs = TRUE) %>% kableExtra::row_spec(0, angle = 90)
 ```
+
 
 
 (ref:ldDDCnzm) Linkage disequilibrium of \gls{ihs} significant SNPs 
